<resources>
    <string name="app_name">UTS_H1101171023</string>
    <string name="uts_teknologi_bergerak">UTS - TEKNOLOGI BERGERAK</string>
    <string name="komponen_1">Komponen 1</string>
    <string name="komponen_2">Komponen 2</string>
    <string name="komponen_3">Komponen 3</string>
    <string name="komponen_4">Komponen 4</string>
    <string name="komponen_5">Komponen 5</string>
    <string name="activity">Activity</string>
    <string name="aktivitas_adalah_titik_masuk_untuk_berinteraksi_dengan_pengguna_ini_mewakili_satu_layar_dengan_antarmuka_pengguna_misalnya_aplikasi_email_mungkin_memiliki_satu_aktivitas_yang_menampilkan_daftar_email_baru_aktivitas_lain_untuk_menulis_email_dan_aktivitas_satunya_lagi_untuk_membaca_email_walaupun_semua_aktivitas_bekerja_sama_untuk_membentuk_pengalaman_pengguna_yang_kohesif_dalam_aplikasi_email_masing_masing_tidak_saling_bergantung_karenanya_aplikasi_berbeda_bisa_memulai_salah_satu_aktivitas_ini_jika_aplikasi_email_mengizinkannya_misalnya_aplikasi_kamera_bisa_memulai_aktivitas_dalam_aplikasi_email_yang_membuat_email_baru_agar_pengguna_bisa_berbagi_gambar">Aktivitas adalah titik masuk untuk berinteraksi dengan pengguna. Ini mewakili satu layar dengan antarmuka pengguna. Misalnya, aplikasi email mungkin memiliki satu aktivitas yang menampilkan daftar email baru, aktivitas lain untuk menulis email, dan aktivitas satunya lagi untuk membaca email. Walaupun semua aktivitas bekerja sama untuk membentuk pengalaman pengguna yang kohesif dalam aplikasi email, masing-masing tidak saling bergantung. Karenanya, aplikasi berbeda bisa memulai salah satu aktivitas ini (jika aplikasi email mengizinkannya). Misalnya, aplikasi kamera bisa memulai aktivitas dalam aplikasi email yang membuat email baru agar pengguna bisa berbagi gambar.</string>
    <string name="contoh_syntax1">Contoh Syntax</string>
    <string name="link_materi1">Link Materi</string>
    <string name="layanan">Layanan</string>
    <string name="link_materi2">Link Materi</string>
    <string name="contoh_syntax2">Contoh Syntax</string>
    <string name="layanan_adalah_titik_masuk_serbaguna_untuk_menjaga_aplikasi_tetap_berjalan_di_latar_belakang_bagi_semua_jenis_alasan_ini_adalah_komponen_yang_berjalan_di_latar_belakang_untuk_melakukan_operasi_yang_berjalan_lama_atau_untuk_melakukan_pekerjaan_bagi_proses_jarak_jauh_layanan_tidak_menyediakan_antarmuka_pengguna_misalnya_sebuah_layanan_bisa_memutar_musik_di_latar_belakang_sementara_pengguna_berada_dalam_aplikasi_lain_atau_layanan_bisa_menarik_data_lewat_jaringan_tanpa_memblokir_interaksi_pengguna_dengan_aktivitas_komponen_lain_seperti_aktivitas_bisa_memulai_layanan_dan_membiarkannya_berjalan_atau_mengikat_layanan_untuk_berinteraksi_dengannya_sebenarnya_ada_dua_layanan_semantik_berbeda_yang_memberi_tahu_sistem_tentang_cara_mengelola_aplikasi_layanan_yang_dimulai_memberi_tahu_sistem_agar_tetap_berjalan_hingga_pekerjaannya_selesai_hal_ini_bisa_jadi_untuk_menyinkronkan_beberapa_data_di_latar_belakang_atau_memutar_musik_meskipun_setelah_pengguna_meninggalkan_aplikasi_tersebut">Layanan adalah titik masuk serbaguna untuk menjaga aplikasi tetap berjalan di latar belakang bagi semua jenis alasan. Ini adalah komponen yang berjalan di latar belakang untuk melakukan operasi yang berjalan lama atau untuk melakukan pekerjaan bagi proses jarak jauh. Layanan tidak menyediakan antarmuka pengguna. Misalnya, sebuah layanan bisa memutar musik di latar belakang sementara pengguna berada dalam aplikasi lain, atau layanan bisa menarik data lewat jaringan tanpa memblokir interaksi pengguna dengan aktivitas. Komponen lain, seperti aktivitas, bisa memulai layanan dan membiarkannya berjalan atau mengikat layanan untuk berinteraksi dengannya. Sebenarnya ada dua layanan semantik berbeda yang memberi tahu sistem tentang cara mengelola aplikasi: Layanan yang dimulai memberi tahu sistem agar tetap berjalan hingga pekerjaannya selesai. Hal ini bisa jadi untuk menyinkronkan beberapa data di latar belakang atau memutar musik meskipun setelah pengguna meninggalkan aplikasi tersebut.</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="penerima_siaran">Penerima Siaran</string>
    <string name="penerima_siaran_adalah_komponen_yang_memungkinkan_sistem_menyampaikan_kejadian_di_luar_alur_pengguna_regular_menjadikan_aplikasi_tersebut_dapat_merespons_pengumuman_siaran_seluruh_sistem_oleh_karena_penerima_siaran_adalah_entri_yang_didefinisikan_dengan_baik_ke_dalam_aplikasi_sistem_dapat_mengirimkan_siaran_meskipun_ke_aplikasi_yang_saat_ini_tidak_berjalan_jadi_misalnya_suatu_aplikasi_dapat_menjadwalkan_alarm_untuk_mengirimkan_notifikasi_agar_pengguna_tahu_tentang_acara_yang_akan_datang_dan_dengan_mengirimkan_alarm_tersebut_ke_penerima_siaran_aplikasi_aplikasi_tersebut_tidak_perlu_untuk_tetap_berjalan_hingga_alarm_mati_banyak_siaran_berasal_dari_sistem_misalnya_siaran_yang_mengumumkan_bahwa_layar_sudah_dimatikan_baterai_lemah_atau_gambar_sudah_diambil_aplikasi_juga_dapat_mengawali_siaran_misalnya_untuk_memberi_tahu_aplikasi_lain_bahwa_beberapa_data_sudah_didownload_ke_perangkat_dan_tersedia_untuk_digunakan_walaupun_penerima_siaran_tidak_menampilkan_antarmuka_pengguna_penerima_bisa_membuat_notifikasi_bilah_status_untuk_memberi_tahu_pengguna_kapan_kejadian_siaran_dilakukan_meskipun_penerima_siaran_umumnya_cuma_menjadi_gerbang_untuk_komponen_lain_dan_dimaksudkan_untuk_melakukan_pekerjaan_dalam_jumlah_sangat_minim">Penerima siaran adalah komponen yang memungkinkan sistem menyampaikan kejadian di luar alur pengguna regular, menjadikan aplikasi tersebut dapat merespons pengumuman siaran seluruh sistem. Oleh karena penerima siaran adalah entri yang didefinisikan dengan baik ke dalam aplikasi, sistem dapat mengirimkan siaran meskipun ke aplikasi yang saat ini tidak berjalan. Jadi, misalnya, suatu aplikasi dapat menjadwalkan alarm untuk mengirimkan notifikasi agar pengguna tahu tentang acara yang akan datang... dan dengan mengirimkan alarm tersebut ke Penerima Siaran aplikasi, aplikasi tersebut tidak perlu untuk tetap berjalan hingga alarm mati. Banyak siaran berasal dari sistem—misalnya, siaran yang mengumumkan bahwa layar sudah dimatikan, baterai lemah, atau gambar sudah diambil. Aplikasi juga dapat mengawali siaran—misalnya, untuk memberi tahu aplikasi lain bahwa beberapa data sudah didownload ke perangkat dan tersedia untuk digunakan. Walaupun penerima siaran tidak menampilkan antarmuka pengguna, penerima bisa membuat notifikasi bilah status untuk memberi tahu pengguna kapan kejadian siaran dilakukan. Meskipun penerima siaran umumnya cuma menjadi gerbang untuk komponen lain dan dimaksudkan untuk melakukan pekerjaan dalam jumlah sangat minim.</string>
    <string name="todo3">TODO</string>
    <string name="textview4">TextView</string>
    <string name="penyedia_materi">Penyedia Materi</string>
    <string name="penyedia_materi_mengelola_set_data_aplikasi_secara_bersama_sama_yang_dapat_anda_simpan_di_sistem_file_di_database_sqlite_di_web_atau_di_lokasi_penyimpanan_persisten_lain_yang_dapat_diakses_aplikasi_anda_melalui_penyedia_materi_aplikasi_lain_bisa_melakukan_kueri_atau_memodifikasi_data_jika_penyedia_materi_mengizinkannya_misalnya_sistem_android_menyediakan_penyedia_materi_yang_mengelola_informasi_kontak_pengguna_karenanya_setiap_aplikasi_dengan_izin_yang_sesuai_bisa_melakukan_kueri_mengenai_bagian_dari_penyedia_materi_seperti_contactscontract_data_untuk_membaca_dan_menulis_informasi_tentang_orang_tertentu_aplikasi_ini_membujuk_agar_memikirkan_penyedia_konten_sebagai_abstraksi_di_database_karena_terdapat_banyak_api_dan_dukungan_dibuat_untuk_kasus_umum_tersebut_namun_demikian_penyedia_konten_memiliki_beragam_tujuan_inti_untuk_perspektif_desain_sistem_bagi_sistem_penyedia_konten_adalah_titik_masuk_ke_dalam_suatu_aplikasi_untuk_memublikasikan_item_data_bernama_yang_diidentifikasi_oleh_skema_uri">Penyedia materi mengelola set data aplikasi secara bersama-sama, yang dapat Anda simpan di sistem file, di database SQLite, di web, atau di lokasi penyimpanan persisten lain yang dapat diakses aplikasi Anda. Melalui penyedia materi, aplikasi lain bisa melakukan kueri atau memodifikasi data jika penyedia materi mengizinkannya. Misalnya, sistem Android menyediakan penyedia materi yang mengelola informasi kontak pengguna. Karenanya, setiap aplikasi dengan izin yang sesuai bisa melakukan kueri mengenai bagian dari penyedia materi, seperti ContactsContract.Data, untuk membaca dan menulis informasi tentang orang tertentu. Aplikasi ini membujuk agar memikirkan penyedia konten sebagai abstraksi di database, karena terdapat banyak API dan dukungan dibuat untuk kasus umum tersebut. Namun demikian, penyedia konten memiliki beragam tujuan inti untuk perspektif desain-sistem. Bagi sistem, penyedia konten adalah titik masuk ke dalam suatu aplikasi untuk memublikasikan item data bernama, yang diidentifikasi oleh skema URI.</string>
    <string name="todo4">TODO</string>
    <string name="setiap_project_aplikasi_harus_memiliki_file_androidmanifest_xml_bernama_persisi_seperti_ini_pada_root_set_sumber_project_file_manifes_menjelaskan_informasi_penting_tentang_aplikasi_anda_ke_fitur_build_android_sistem_operasi_android_dan_google_play">Setiap project aplikasi harus memiliki file AndroidManifest.xml (bernama persisi seperti ini) pada root set sumber project. File manifes menjelaskan informasi penting tentang aplikasi Anda ke fitur build Android, sistem operasi Android, dan Google Play.</string>
    <string name="manifest_aplikasi">Manifest Aplikasi</string>
    <string name="todo5">TODO</string>
    <string name="todo2">todo2</string>
    <string name="todosintaxlayanan1">TODO</string>
    <string name="todolinklayanan">TODO</string>
    <string name="todosintaxactivity">TODO</string>
    <string name="todolinkactivity">TODO</string>
    <string name="todosiaransintax">TODO</string>
    <string name="todosiaranlink">TODO</string>
    <string name="todomaterisintax1">TODO</string>
    <string name="todomaterilink">TODO</string>
    <string name="todomanifestlink">TODO</string>
    <string name="todomanifestsintax">TODO</string>
    <string name="todosintaxsactiviti">TODO</string>
    <string name="contoh_syntax_activity">Contoh Syntax Activity</string>
    <string name="todohomeactiviti">TODO</string>
    <string name="contoh_syntax_layanan">Contoh Syntax Layanan</string>
    <string name="todosintaxlayanan">TODO</string>
    <string name="todohomelayanan">TODO</string>
    <string name="contoh_syntax_penerima_siaran">Contoh Syntax Penerima Siaran</string>
    <string name="todosintaxsiaran">TODO</string>
    <string name="todohomesiaran">TODO</string>
    <string name="contoh_syntax_manifest_aplikasi">Contoh Syntax Manifest Aplikasi</string>
    <string name="todosintaxmanifet">TODO</string>
    <string name="todohomemanifest">TODO</string>
    <string name="contoh_syntax_penyedia_materi">Contoh Syntax Penyedia Materi</string>
    <string name="todomaterisintax">TODO</string>
    <string name="todohomesintax">TODO</string>
    <string name="komponen_android">Komponen Android</string>
    <string name="todoaktiv">TODO</string>
    <string name="todolayan">TODO</string>
    <string name="todosiar">TODO</string>
    <string name="todopenyedia">TODO</string>
    <string name="todomani">TODO</string>
</resources>
